kubernetes/policies/security-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: security-baseline
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: disallow-privileged-containers
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Privileged containers are not allowed"
      pattern:
        spec:
          =(securityContext):
            =(privileged): "false"
          containers:
          - name: "*"
            =(securityContext):
              =(privileged): "false"
  
  - name: require-non-root-user
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Containers must run as non-root user"
      pattern:
        spec:
          =(securityContext):
            =(runAsNonRoot): "true"
          containers:
          - name: "*"
            =(securityContext):
              =(runAsNonRoot): "true"

  - name: disallow-host-network
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Host network is not allowed"
      pattern:
        spec:
          =(hostNetwork): "false"
